k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: aditi62/myapp:latest
        ports:
        - containerPort: 3000

        resources:
          requests:
            cpu: "200m"
          limits:
            cpu: "500m"
